Remove folders and move files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1><b><u>The Pastry Playground!</u></b></h1>
         </div>
         <div class="pastry-playground-logo">
-            <img src="../Pictures/pastry.png" alt="logo" width="60px" height="60px">
+            <img src="pastry.png" alt="logo" width="60px" height="60px">
         </div>
         <nav class="nav-bar">
             <ul>
@@ -27,7 +27,7 @@
             <div class="recipe-title-1">
                 <h2>Enchanting Eclairs...</h2>    
                 <div class="recipe-image-1">
-                    <img src="../Pictures/eclairs.jpeg" alt="eclairs" height="200px" width="200px">
+                    <img src="eclairs.jpeg" alt="eclairs" height="200px" width="200px">
                     <div class="recipe-text-1">
                         <h3>Ingredients:</h3>
                         <ul>
@@ -56,7 +56,7 @@
             <div class="recipe-title-2">
                 <h2>Tantalising Tarts...</h2>    
                 <div class="recipe-image-2">
-                    <img src="../Pictures/vegan-jam-tarts-1.jpg" alt="eclairs" height="200px" width="200px">
+                    <img src="vegan-jam-tarts-1.jpg" alt="eclairs" height="200px" width="200px">
                     <div class="recipe-text-2">
                         <h3>Ingredients:</h3>
                         <ul>
