Add CSS and edit HTML

--- a/index.html
+++ b/index.html
@@ -7,47 +7,46 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="pastry-playground-title">
-            <h1><b><u>The Pastry Playground!</u></b></h1>
-        </div>
+    <header class="header-bar">
         <div class="pastry-playground-logo">
-            <img src="pastry.png" alt="logo" width="60px" height="60px">
+            <img src="bakery2.png" alt="logo" height="60px" width="60px">
         </div>
-        <nav class="nav-bar">
-            <ul>
-                <li><a href="/Pages/our-history.html">Our History</a></li>
-                <li><a href="/Pages/about-us.html">About Us</a></li>
-                <li><a href="/Pages/contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="pastry-playground-title">
+            <h1><b>The Pastry Playground</b></h1>
+        </div>
+        <div class="nav-bar">
+            <nav>
+                <button><a href="/Pages/our-recipes.html" class="btn recipes">Our Recipes</a></button>
+                <button><a href="/Pages/about-us.html" class="btn about us">About Us</a></button>
+                <button><a href="/Pages/contact.html" class="btn contact">Contact</a></button>
+            </nav>
+        </div>    
     </header>
-    <main>
+    <main class="split-section">
         <div class="recipe-section-1">
             <div class="recipe-title-1">
                 <h2>Enchanting Eclairs...</h2>    
                 <div class="recipe-image-1">
-                    <img src="eclairs.jpeg" alt="eclairs" height="200px" width="200px">
+                    <img src="eclairs.jpeg" alt="eclairs">
                     <div class="recipe-text-1">
                         <h3>Ingredients:</h3>
-                        <ul>
-                            <li>1 cup of stardust-infused flour</li>
-                            <li>4 dragon eggs (or regular eggs if unavailable)</li>
-                            <li>1/2 cup of unicorn tears</li>
-                            <li>A pinch of fairy sugar</li>
-                            <li>A dash of mermaid sea salt</li>
-                            <li>3 tablespoons of phoenix feather butter</li>
-                        </ul>
+                            <ul>
+                                <li>1 cup of stardust-infused flour</li>
+                                <li>4 dragon eggs (or regular eggs if unavailable)</li>
+                                <li>1/2 cup of unicorn tears</li>
+                                <li>A pinch of fairy sugar</li>
+                                <li>A dash of mermaid sea salt</li>
+                                <li>3 tablespoons of phoenix feather butter</li>
+                            </ul>
                         
                         <h3>Instructions:</h3>
-                        <ol>
-                            <li>In a cauldron, combine stardust flour, dragon eggs, and unicorn tears. Stir gently with a wand until the mixture shimmers.</li>
-                            <li>Sprinkle in fairy sugar and mermaid sea salt, then conjure a flickering flame beneath the cauldron.</li>
-                            <li>With phoenix feather butter, trace mystic symbols on parchment. Pipe the ethereal dough into spellbinding eclairs.</li>
-                            <li>Bake under a full moon until golden and enchanted.</li>
-                            <li>Serve with a sprinkle of stardust for a magical treat that mesmerizes all who taste it.</li>
-                        </ol>
-
+                            <ol>
+                                <li>In a cauldron, combine stardust flour, dragon eggs, and unicorn tears. Stir gently with a wand until the mixture shimmers.</li>
+                                <li>Sprinkle in fairy sugar and mermaid sea salt, then conjure a flickering flame beneath the cauldron.</li>
+                                <li>With phoenix feather butter, trace mystic symbols on parchment. Pipe the ethereal dough into spellbinding eclairs.</li>
+                                <li>Bake under a full moon until golden and enchanted.</li>
+                                <li>Serve with a sprinkle of stardust for a magical treat that mesmerizes all who taste it.</li>
+                            </ol>
                     </div>
                 </div>
             </div>
@@ -56,7 +55,7 @@
             <div class="recipe-title-2">
                 <h2>Tantalising Tarts...</h2>    
                 <div class="recipe-image-2">
-                    <img src="vegan-jam-tarts-1.jpg" alt="eclairs" height="200px" width="200px">
+                    <img src="vegan-jam-tarts-1.jpg" alt="eclairs">
                     <div class="recipe-text-2">
                         <h3>Ingredients:</h3>
                         <ul>
@@ -85,14 +84,12 @@
     </main>
     <footer>
         <div class="social-media-links">
-            <ul>
-                <li><a href="twitter.com">Twitter</a></li>
-                <li><a href="instagram.com">Instagram</a></li>
-                <li><a href="facebook.com">Facebook</a></li>
-            </ul>
-        </div>
-        <div class="copyright-section">
-            <p>&copy; 2023 ThePastryPlayground</p>
+            <button><a href="twitter.com">Twitter</a></button>
+            <button><a href="instagram.com">Instagram</a></button>
+            <button><a href="facebook.com">Facebook</a></button>
+            <div class="copyright-section">
+                <p>&copy; 2023 ThePastryPlayground</p>
+            </div>
         </div>
     </footer>
 </body>
