--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div class="nav-bar">
             <nav>
-                <button><a href="/Pages/our-recipes.html" class="btn recipes">Our Recipes</a></button>
-                <button><a href="/Pages/about-us.html" class="btn about us">About Us</a></button>
-                <button><a href="/Pages/contact.html" class="btn contact">Contact</a></button>
+                <button><a href="/Pages/our-recipes.html" class="btn recipes"><b>Our Recipes</b></a></button>
+                <button><a href="/Pages/about-us.html" class="btn about us"><b>About Us</b></a></button>
+                <button><a href="/Pages/contact.html" class="btn contact"><b>Contact</b></a></button>
             </nav>
         </div>    
     </header>
@@ -84,11 +84,11 @@
     </main>
     <footer>
         <div class="social-media-links">
-            <button><a href="twitter.com">Twitter</a></button>
-            <button><a href="instagram.com">Instagram</a></button>
-            <button><a href="facebook.com">Facebook</a></button>
+            <button><a href="twitter.com" class="social-media-1">Twitter</a></button>
+            <button><a href="instagram.com" class="social-media-2">Instagram</a></button>
+            <button><a href="facebook.com" class="social-media-3">Facebook</a></button>
             <div class="copyright-section">
-                <p>&copy; 2023 ThePastryPlayground</p>
+                <p class="copyright-text">&copy; 2023 ThePastryPlayground</p>
             </div>
         </div>
     </footer>
