Update HMTL pages

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div class="nav-bar">
             <nav>
-                <button><a href="/Pages/our-recipes.html" class="btn recipes"><b>Our Recipes</b></a></button>
-                <button><a href="/Pages/about-us.html" class="btn about us"><b>About Us</b></a></button>
-                <button><a href="/Pages/contact.html" class="btn contact"><b>Contact</b></a></button>
+                <button><a href="our-recipes.html" class="btn recipes"><b>Our Recipes</b></a></button>
+                <button><a href="about-us.html" class="btn about us"><b>About Us</b></a></button>
+                <button><a href="contact.html" class="btn contact"><b>Contact</b></a></button>
             </nav>
         </div>    
     </header>
