--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="/cookies.js"></script>
     <header class="header-bar">
         <div class="pastry-playground-logo">
             <img src="bakery2.png" alt="logo" height="60px" width="60px">
@@ -22,6 +23,9 @@
             </nav>
         </div>    
     </header>
+    <section>
+        <h3 class="hi-script"><script src="/hi-script.js"></script></h3>
+    </section>
     <main class="split-section">
         <div class="recipe-section-1">
             <div class="recipe-title-1">
@@ -92,5 +96,6 @@
             </div>
         </div>
     </footer>
+    <script src="/background.js"></script>
 </body>
 </html>
