--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="/cookies.js"></script>
+    <script src="cookies.js"></script>
     <header class="header-bar">
         <div class="pastry-playground-logo">
             <img src="bakery2.png" alt="logo" height="60px" width="60px">
@@ -24,7 +24,7 @@
         </div>    
     </header>
     <section>
-        <h3 class="hi-script"><script src="/hi-script.js"></script></h3>
+        <h3 class="hi-script"><script src="hi-script.js"></script></h3>
     </section>
     <main class="split-section">
         <div class="recipe-section-1">
@@ -96,6 +96,6 @@
             </div>
         </div>
     </footer>
-    <script src="/background.js"></script>
+    <script src="background.js"></script>
 </body>
 </html>
