Update loop.js and index.html

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         </script>
       </h3>
       <p>
+        Your rating..
         <script>
           getRating();
         </script>
+        , thanks for the feedback!
       </p>
     </section>
     <main class="split-section">
